feat: add group for AWS SDK updates in Dependabot configuration

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,10 @@ updates:
     directory: /
     schedule:
       interval: monthly
+    groups:
+      aws-sdk:
+        patterns:
+          - "github.com/aws/*"
 
   - package-ecosystem: "docker"
     directory: /
