--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
-          go-version: "1.25"
+          go-version: "1.26"
           check-latest: true
       - run: go build
       - run: go test -v ./...
         env:
-          IS_CI: "true"
+          GOTGZ_TEST_S3_ENDPOINT: "http://localhost:4566"
