--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,7 @@ jobs:
         with:
           go-version: "1.26"
           check-latest: true
-      - run: go build
+      - run: go build -o gotgz ./cmd/gotgz
       - run: go test -v ./...
         env:
           GOTGZ_TEST_S3_ENDPOINT: "http://localhost:4566"
