--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,7 @@ jobs:
           go-version: "1.26"
           check-latest: true
       - run: go fix -diff ./...
+      - run: go mod tidy -diff
       - run: go build -o gotgz ./cmd/gotgz
       - run: go test -v ./...
         env:
