--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,9 +25,11 @@ jobs:
         with:
           go-version: "1.26"
           check-latest: true
-      - run: go fix -diff ./...
-      - run: go mod tidy -diff
-      - run: go build -o gotgz ./cmd/gotgz
+      - name: Golangci-lint
+        uses: golangci/golangci-lint-action@v9
+        with:
+          version: latest
+      - run: go build ./...
       - run: go test -v ./...
         env:
           GOTGZ_TEST_S3_ENDPOINT: "http://localhost:4566"
