Add suffix option for archive filenames and implement related tests

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
           version: latest
       - run: go build ./...
       - run: gofmt -d .
+      - run: go fix -diff ./...
       - run: go test -v ./...
         env:
           GOTGZ_TEST_S3_ENDPOINT: "http://localhost:4566"
