--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,7 +3,7 @@ name: test
 on:
   push:
     branches:
-      - "*"
+      - "main"
   pull_request:
     branches:
       - "main"
@@ -23,9 +23,15 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-go@v6
         with:
-          go-version: "1.25"
+          go-version: "1.26"
           check-latest: true
-      - run: go build
+      - name: Golangci-lint
+        uses: golangci/golangci-lint-action@v9
+        with:
+          version: latest
+      - run: go build ./...
+      - run: gofmt -d .
+      - run: go fix -diff ./...
       - run: go test -v ./...
         env:
-          IS_CI: "true"
+          GOTGZ_TEST_S3_ENDPOINT: "http://localhost:4566"
