--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -15,7 +15,7 @@ builds:
       - -trimpath
     ldflags:
       - -s -w
-    main: ./gotgz
+    main: ./cmd/gotgz
 
 archives:
   - formats: ["tar.gz"]
