--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,6 +31,7 @@ jobs:
           version: latest
       - run: go build ./...
       - run: gofmt -d .
+      - run: go vet -diff ./...
       - run: go fix -diff ./...
       - run: go test -v ./...
         env:
