ci: correct go vet command in CI workflow

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,7 +31,7 @@ jobs:
           version: latest
       - run: go build ./...
       - run: gofmt -d .
-      - run: go vet -diff ./...
+      - run: go vet ./...
       - run: go fix -diff ./...
       - run: go test -v ./...
         env:
